@@ -32,9 +32,9 @@ public class ClusterTableListCommanderTest extends IntegrationTest {
 
         // then
         assertThat(sut.getTables()).hasSize(2);
-        assertThat(sut.getTables().get(0).getTableName()).isEqualTo("test_table_1");
-        assertThat(sut.getTables().get(0).getComment()).isEqualTo("test_table_one");
-        assertThat(sut.getTables().get(0).getOptions()).containsEntry("bloom_filter_fp_chance", 0.01);
+        assertThat(sut.getTables().getFirst().getTableName()).isEqualTo("test_table_1");
+        assertThat(sut.getTables().getFirst().getComment()).isEqualTo("test_table_one");
+        assertThat(sut.getTables().getFirst().getOptions()).containsEntry("bloom_filter_fp_chance", 0.01);
 
         assertThat(sut.getTables().get(1).getTableName()).isEqualTo("test_table_2");
         assertThat(sut.getTables().get(1).getComment()).isEqualTo("test_table_two");
@@ -54,9 +54,9 @@ public class ClusterTableListCommanderTest extends IntegrationTest {
 
         // then
         assertThat(sut.getTables()).hasSize(1);
-        assertThat(sut.getTables().get(0).getTableName()).isEqualTo("test_table_1");
-        assertThat(sut.getTables().get(0).getComment()).isEqualTo("test_table_one");
-        assertThat(sut.getTables().get(0).getOptions()).containsEntry("bloom_filter_fp_chance", 0.01);
+        assertThat(sut.getTables().getFirst().getTableName()).isEqualTo("test_table_1");
+        assertThat(sut.getTables().getFirst().getComment()).isEqualTo("test_table_one");
+        assertThat(sut.getTables().getFirst().getOptions()).containsEntry("bloom_filter_fp_chance", 0.01);
     }
 
 }
